--- a/TargetSum/package.json
+++ b/TargetSum/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Yolly",
+  "name": "TargetSum",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
     "react-native": "0.71.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
+    "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.0.0",
